[EP-365] Add additional tags to items not flag for translation in Django [EP-362] Middleware to log users country from IP

--- a/templates/base.html
+++ b/templates/base.html
@@ -231,7 +231,7 @@
                                 {% endif %}
                             </p>
                             <!-- TODO: logic for setting status -->
-                            <a href="#"><i class="fa fa-circle text-success" style="color: #7ED321"></i> Online</a>
+                            <a href="#"><i class="fa fa-circle text-success" style="color: #7ED321"></i> {% trans "Online" %}</a>
                         </div>
                     </div>
                      <!-- search form -->
@@ -328,7 +328,7 @@
                     <small class="label bg-blue">Ekata</small>
                     <b><small class="label {{ VERSION_COLOR }}">{{ VERSION_NAME }}</small> v{{ VERSION_NUMBER }} </b>
                 </div>
-                <strong>Copyright &copy; 2014-2016 <a href="/">Ekata</a>.</strong> All rights
+                <strong>Copyright &copy; 2014-2017 <a href="/">Ekata</a>.</strong> All rights
                 reserved.
                 <small class="label bg-green"><a href="https://www.djangoproject.com/" target='_blank' style="color: #fff;">Powered by Django</a></small>
             </footer>
