--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static "dist/img/favicon.ico" %}"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <!-- Bootstrap 3.3.6 -->
     <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
     <!-- Font Awesome -->
@@ -34,7 +36,7 @@
     <link rel="manifest" href="/manifest.json">
     {% compress css %}
     <!-- Theme style -->
-    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?v=8.3.11">
+    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?v=8.4.0">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="{% static "dist/css/skins/skin-blue.css" %}?v=1.0.11">
@@ -64,8 +66,9 @@
     <link rel="stylesheet" href="{% static "plugins/tagit/jquery.tagit.css" %}">
     <!-- Date Time Picker -->
     <link rel="stylesheet" href="{% static "plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" %}">
-    <!-- PicEdit -->
+    <!-- PicEdit
     <link rel="stylesheet" href="{% static "plugins/picedit/css/picedit.min.css" %}">
+    -->
     <!--Sweet Alert-->
     <link rel="stylesheet" href="{% static "plugins/swal/sweetalert.css" %}">
 
@@ -464,8 +467,10 @@
     <script src="{% static "plugins/tagit/tag-it.js" %}"></script>
     <!-- Date time Picker -->
     <script src="{% static "plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js" %}"></script>
-    <!-- PicEdit -->
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <!-- PicEdit
     <script src="{% static "plugins/picedit/js/picedit.min.js" %}"></script>
+    -->
     <!-- AdminLTE App -->
     <script src="{% static "dist/js/app.js" %}?v=1.1.1"></script>
     <!-- AdminLTE for demo purposes -->
