--- a/templates/profilesystem/pinfo.html
+++ b/templates/profilesystem/pinfo.html
@@ -1,10 +1,8 @@
 {% load staticfiles i18n %}
 {% if request.user.profile.avatar %}
-    <img src="{{ request.user.profile.avatar.thumbnail.128x128 }}" class="profile-user-img img-responsive img-circle useravatar" alt="User Image">
-    <a data-target="#imgModal" data-toggle="modal" class="profile-edit"><i class="fa fa-pencil"></i></a>
+    <img src="{{ request.user.profile.avatar.thumbnail.128x128 }}" class="profile-user-img img-responsive img-circle useravatar" alt="User Image" data-target="#imgModal" data-toggle="modal">
 {% else %}
-    <img src="{% static "dist/img/placeholder-user.png" %}" width="128" height="128" class="profile-user-img img-responsive img-circle useravatar" alt="User Image">
-    <a data-target="#imgModal" data-toggle="modal" class="profile-edit" id="avatar"><i class="fa fa-pencil"></i></a>
+    <img src="{% static "dist/img/placeholder-user.png" %}" width="128" height="128" class="profile-user-img img-responsive img-circle useravatar" alt="User Image" data-target="#imgModal" data-toggle="modal" id="avatar">
 {% endif %}
 <strong><i class="fa fa-user margin-r-5"></i>{% trans "Username" %}</strong>
 
