Changed version no

--- a/templates/profilesystem/index.html
+++ b/templates/profilesystem/index.html
@@ -805,7 +805,7 @@
 {% block extrascripts %}
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.full.min.js"></script>
     {% compress js %}
-    <script type="text/javascript" src="{% static "dist/js/avatar.js" %}"></script>
+    <script type="text/javascript" src="{% static "dist/js/avatar.js" %}?v=1.0.0"></script>
     <script type="text/javascript">
         function getCookie(name) {
             var cookieValue = null;
