[FIXED] changed alignment of picedit tools(old avatar editor)

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
     <!-- Date Time Picker -->
     <link rel="stylesheet" href="{% static "plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" %}">
     <!-- PicEdit -->
-    <link rel="stylesheet" href="{% static "plugins/picedit/css/picedit.min.css" %}">
+    <link rel="stylesheet" href="{% static "plugins/picedit/css/picedit.css" %}">
     <!--Sweet Alert-->
     <link rel="stylesheet" href="{% static "plugins/swal/sweetalert.css" %}">
 
