--- a/static/plugins/picedit/css/picedit.css
+++ b/static/plugins/picedit/css/picedit.css
@@ -102,7 +102,8 @@
     width: 400px;
     height: 200px;
     color: #aaa;
-    overflow: hidden;
+    margin-top: 30px;
+	margin-bottom: 10px;
 }
 .picedit_canvas_box:hover .picedit_action_btns, .picedit_action_btns.active {
 	z-index: 8;
@@ -114,21 +115,18 @@
 }
 .picedit_nav_box {
     position: absolute;
-    top: 0;
+    top: -35px;
     right: 0;
     width: 98%;
     padding: 1% 1% 1.5% 1%;
     z-index: 15;
-    opacity: 0;
-	
+    opacity: 1;
+
 	-webkit-transition: opacity 200ms ease-out;
 	-moz-transition: opacity 200ms ease-out;
 	-ms-transition: opacity 200ms ease-out;
 	-o-transition: opacity 200ms ease-out;
 	transition: opacity 200ms ease-out;
-}
-.picedit_nav_box:hover, .picedit_nav_box.active {
-	opacity: 0.8;
 }
 .picedit_control {
     padding: 0 0.25em;
@@ -142,19 +140,13 @@
 	-o-transition: all 200ms ease-in-out;
 	transition: all 200ms ease-in-out;
 }
-.picedit_control:hover, .picedit_element.active > .picedit_control, .picedit_control.active {
+.picedit_element.active > .picedit_control, .picedit_control.active {
 	opacity: 1;
 	text-shadow: 0px 0.3px 0px rgba(255, 255, 255, 0.8), 0 0 0 rgba(107, 107, 107, 0.62), 0px 0.3px 0px #FFF;
 	color: transparent;
 }
 .picedit_gray_gradient {
-	background: -moz-linear-gradient(top,  rgba(0,0,0,1) 0%, rgba(0,0,0,0.4) 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,1)), color-stop(100%,rgba(0,0,0,0.4)));
-	background: -webkit-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(0,0,0,0.4) 100%);
-	background: -o-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(0,0,0,0.4) 100%);
-	background: -ms-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(0,0,0,0.4) 100%);
-	background: linear-gradient(to bottom,  rgba(0, 0, 0, 1) 0%,rgba(0, 0, 0, 0.4) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=0 );
+	background: transparent;
 }
 .picedit_pos_elements {}
 .picedit_nav_elements {
@@ -224,7 +216,6 @@
 .picedit_tooltip {
 	position: relative;
 	background: #ffffff;
-	border: 1px solid #949494;
 	padding: 9px 4px 7px;
 	-webkit-box-shadow: 0em 0em 0.2em 0.1em rgba(95, 95, 95, 0.55);
 	box-shadow: 0em 0em 0.2em 0.1em rgba(95, 95, 95, 0.55);
@@ -297,7 +288,7 @@
 	margin: 12% auto 0% auto;
 	position: relative;
 	opacity: 0;
-	
+
 	z-index: 4;
 	-webkit-transition: all 200ms ease-in-out;
 	-moz-transition: all 200ms ease-in-out;
@@ -319,7 +310,8 @@
 .picedit_nomargin {
 	margin: 0;
 }
-.picedit_message { 
+.picedit_message {
+	display: none;
     position: absolute;
     padding: 1.4em 2.5em 1em 1em;
     bottom: -100px;
@@ -334,7 +326,7 @@
     border-radius: 4px 4px 4px 4px;
     -webkit-box-shadow: 0 0 2px 1px #D8D8D8;
     box-shadow: 0 0 0.3em 0.2em #D8D8D8;
-	
+
 	-webkit-transition: bottom 200ms ease-out;
 	-moz-transition: bottom 200ms ease-out;
 	-ms-transition: bottom 200ms ease-out;
