--- a/templates/base.html
+++ b/templates/base.html
@@ -465,7 +465,7 @@
     <!-- Date time Picker -->
     <script src="{% static "plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js" %}"></script>
     <!-- PicEdit -->
-    <script src="{% static "plugins/picedit/js/picedit.js" %}"></script>
+    <script src="{% static "plugins/picedit/js/picedit.js" %}?v=1.0.0"></script>
     <!-- AdminLTE App -->
     <script src="{% static "dist/js/app.js" %}?v=1.1.1"></script>
     <!-- AdminLTE for demo purposes -->
