--- a/templates/profilesystem/index.html
+++ b/templates/profilesystem/index.html
@@ -730,8 +730,8 @@
                     <canvas id="painterCanvas" width="300" height="300" style="position: absolute;left: 10%;"></canvas>
                 {% endcomment %}
                 <div class="avatar_image_actions">
-                    <button class="btn btn-rounded" id="loadImage"><i class="fa fa-file-image-o"></i></button>
-                    <button class="btn btn-rounded" id="loadVideo"><i class="fa fa-camera-retro"></i></button>
+                    <button class="btn btn-rounded" id="loadImage" style="width: 80px"><i class="fa fa-file-image-o"></i></button>
+                    <button class="btn btn-rounded" id="loadVideo" style="width: 80px"><i class="fa fa-camera-retro"></i></button>
                 </div>
             </div>
             <div class="avatar_editor_options">
