--- a/templates/crowdfunding/index.html
+++ b/templates/crowdfunding/index.html
@@ -90,7 +90,17 @@
                   <div class="form-group" id="div_id_amount">
                       <label>
                           <span>{% trans "Amount" %}</span>
-                          <input class="form-control" type="number" name="amount" placeholder="Enter amount" min="1" required="required" id="id_amount">
+                          <div class="input-group">
+                              <input class="form-control" type="number" name="amount" placeholder="Enter amount or select from dropdown" min="1" required="required" value="{{ default_amount }}" id="id_amount">
+                              <div class="input-group-btn">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
+                                <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                                    {% for value in crowdfund.predefinedamount_set.all %}
+                                        <li><a href="javascript:void(0);" class="pamount" data-value="{{ value.amount }}">$ {{ value.amount }}</a></li>
+                                    {% endfor %}
+                                </ul>
+                              </div><!-- /btn-group -->
+                          </div>
                       </label>
                   </div>
                   <div class="form-group" style="margin-bottom: 50px" id="div_id_message">
@@ -188,7 +198,10 @@
             if (payment_success) {
                 location.reload();
             }
-        })
+        });
+        $('.pamount').click(function () {
+            $("#id_amount").val($(this).data('value'));
+        });
     </script>
     {% endcompress %}
 {% endblock %}
