--- a/templates/crowdfunding/thankyou.html
+++ b/templates/crowdfunding/thankyou.html
@@ -1,4 +1,4 @@
 {% load i18n %}
 <div class="widget-box" style="text-align: center">
-    <h4>{% trans "Thank You" %}</h4>
+    <p>{{ crowdfund.thankyou_message }}</p>
 </div>
